Added a line for demonstration
I wanted to show how to make edits to a file

--- a/Students.quiz.taking_a_quiz.htm
+++ b/Students.quiz.taking_a_quiz.htm
@@ -9,7 +9,7 @@ Wiley: Accounting
    <link href="./Wiley_ Accounting_files/css" rel="stylesheet" type="text/css">
 
 
-  Hey! this is an example of Editing a Document in the Repo.
+  Hey! this is an example of Editing a Document in the Repo. Now you can too!
 
 
 
