I added a line saying what the demonstration does
on the 43 and 44th line I added some demonstration commentary

--- a/Students.quiz.taking_a_quiz.htm
+++ b/Students.quiz.taking_a_quiz.htm
@@ -40,6 +40,8 @@ Wiley: Accounting
     _elqQ.push(['elqSetSiteId', '1133198723']);
     _elqQ.push(['elqTrackPageView']);
 
+Today I am going to show you how to edit files!
+
     (function () {
         function async_load() {
             var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
