Added emphasis for the audience
Wanted to wrtie a short message for everyone to see!

--- a/Students.quiz.taking_a_quiz.htm
+++ b/Students.quiz.taking_a_quiz.htm
@@ -10,6 +10,7 @@ Wiley: Accounting
 
 
   Hey! this is an example of Editing a Document in the Repo. Now you can too!
+  This is a live demonstration!
 
 
 
