I added a line of commentary
Im going to use this to show the comment on a specific line feature of github.

--- a/Students.quiz.taking_a_quiz.htm
+++ b/Students.quiz.taking_a_quiz.htm
@@ -12,7 +12,7 @@ Wiley: Accounting
   Hey! this is an example of Editing a Document in the Repo. Now you can too!
 
 
-
+Here, I made a change to a file.
 
 <meta name="description" content="">
 <link rel="shortcut icon" type="image/ico" href="http://media.wiley.com/spa_assets/R16B095RC1/site/wiley2/pvo/images/favicon.ico">
