I added a line about google drive
I added a line about the new google drive export feature in the header

--- a/studentfaculty.calendar.exporting_the_calendar.html
+++ b/studentfaculty.calendar.exporting_the_calendar.html
@@ -20,7 +20,7 @@
     <h1>Exporting the Calendar</h1>
 
     <p>Sometimes, students and faculty wish to export Engage calendar events so that they may be used by other calendar management applications.</p>
-    <p>This document illustrates how to export the calendar.</p>
+    <p>This document illustrates how to export the calendar. Now you can export to google drive too!</p>
 
 
 
